frontend/test/should_pass/iterated_005.grg
test t
{
	x:Node;
	multiple
	{
		alternative {
			Something {
				.;
			}
			SomethingElse {
				. -->;
			}
		}
	}
}