frontend/test/should_fail/alternative_005.grg
test alttest
{
    alternative
    {
        alt1
        {
            x;  // x is undeclared
        }
        alt2
        {
            x:Node;
        }
    }
}
